add_library(backends.cuda.image.statistics 
	8s/averageError.cu
	8s/averageErrorMasked.cu
	8s/averageRelativeError.cu
	8s/averageRelativeErrorMasked.cu
	8s/countInRange.cu
	8s/countInRangeMasked.cu
	8s/crossCorrelation.cu
	8s/crossCorrelationCoefficient.cu
	8s/crossCorrelationNormalized.cu
	8s/dotProduct.cu
	8s/dotProductMasked.cu
	8s/integral.cu
	8s/integralSqr.cu
	8s/max.cu
	8s/maxMasked.cu
	8s/maxIdx.cu
	8s/maxIdxMasked.cu
	8s/maxRelativeError.cu
	8s/maxRelativeErrorMasked.cu
	8s/mean.cu
	8s/meanMasked.cu
	8s/meanStd.cu
	8s/meanStdMasked.cu
	8s/min.cu
	8s/minMasked.cu
	8s/minIdx.cu
	8s/minIdxMasked.cu
	8s/minMax.cu
	8s/minMaxMasked.cu
	8s/minMaxEvery.cu
	8s/minMaxIdx.cu
	8s/minMaxIdxMasked.cu
	8s/mse.cu
	8s/mseMasked.cu
	8s/msssim.cu
	8s/normDiffInf.cu
	8s/normDiffInfMasked.cu
	8s/normDiffL1.cu
	8s/normDiffL1Masked.cu
	8s/normDiffL2.cu
	8s/normDiffL2Masked.cu
	8s/normInf.cu
	8s/normInfMasked.cu
	8s/normL1.cu
	8s/normL1Masked.cu
	8s/normL2.cu
	8s/normL2Masked.cu
	8s/normRelInf.cu
	8s/normRelInfMasked.cu
	8s/normRelL1.cu
	8s/normRelL1Masked.cu
	8s/normRelL2.cu
	8s/normRelL2Masked.cu
	8s/psnr.cu
	8s/qualityIndex.cu
	8s/qualityIndexWindow.cu
	8s/squareDistanceNormalized.cu
	8s/ssim.cu
	8s/sum.cu
	8s/sumMasked.cu

	8s/histogramEven.cu
	8s/histogramRange.cu

	
	8u/averageError.cu
	8u/averageErrorMasked.cu
	8u/averageRelativeError.cu
	8u/averageRelativeErrorMasked.cu
	8u/countInRange.cu
	8u/countInRangeMasked.cu
	8u/crossCorrelation.cu
	8u/crossCorrelationCoefficient.cu
	8u/crossCorrelationNormalized.cu
	8u/dotProduct.cu
	8u/dotProductMasked.cu
	8u/integral.cu
	8u/integralSqr.cu
	8u/max.cu
	8u/maxMasked.cu
	8u/maxIdx.cu
	8u/maxIdxMasked.cu
	8u/maxRelativeError.cu
	8u/maxRelativeErrorMasked.cu
	8u/mean.cu
	8u/meanMasked.cu
	8u/meanStd.cu
	8u/meanStdMasked.cu
	8u/min.cu
	8u/minMasked.cu
	8u/minIdx.cu
	8u/minIdxMasked.cu
	8u/minMax.cu
	8u/minMaxMasked.cu
	8u/minMaxEvery.cu
	8u/minMaxIdx.cu
	8u/minMaxIdxMasked.cu
	8u/mse.cu
	8u/mseMasked.cu
	8u/msssim.cu
	8u/normDiffInf.cu
	8u/normDiffInfMasked.cu
	8u/normDiffL1.cu
	8u/normDiffL1Masked.cu
	8u/normDiffL2.cu
	8u/normDiffL2Masked.cu
	8u/normInf.cu
	8u/normInfMasked.cu
	8u/normL1.cu
	8u/normL1Masked.cu
	8u/normL2.cu
	8u/normL2Masked.cu
	8u/normRelInf.cu
	8u/normRelInfMasked.cu
	8u/normRelL1.cu
	8u/normRelL1Masked.cu
	8u/normRelL2.cu
	8u/normRelL2Masked.cu
	8u/psnr.cu
	8u/qualityIndex.cu
	8u/qualityIndexWindow.cu
	8u/squareDistanceNormalized.cu
	8u/ssim.cu
	8u/sum.cu
	8u/sumMasked.cu

	8u/histogramEven.cu
	8u/histogramRange.cu

	
	16bf/averageError.cu
	16bf/averageErrorMasked.cu
	16bf/averageRelativeError.cu
	16bf/averageRelativeErrorMasked.cu
	16bf/countInRange.cu
	16bf/countInRangeMasked.cu
	16bf/crossCorrelation.cu
	16bf/crossCorrelationCoefficient.cu
	16bf/crossCorrelationNormalized.cu
	16bf/dotProduct.cu
	16bf/dotProductMasked.cu
	16bf/integral.cu
	16bf/integralSqr.cu
	16bf/max.cu
	16bf/maxMasked.cu
	16bf/maxIdx.cu
	16bf/maxIdxMasked.cu
	16bf/maxRelativeError.cu
	16bf/maxRelativeErrorMasked.cu
	16bf/mean.cu
	16bf/meanMasked.cu
	16bf/meanStd.cu
	16bf/meanStdMasked.cu
	16bf/min.cu
	16bf/minMasked.cu
	16bf/minIdx.cu
	16bf/minIdxMasked.cu
	16bf/minMax.cu
	16bf/minMaxMasked.cu
	16bf/minMaxEvery.cu
	16bf/minMaxIdx.cu
	16bf/minMaxIdxMasked.cu
	16bf/mse.cu
	16bf/mseMasked.cu
	16bf/msssim.cu
	16bf/normDiffInf.cu
	16bf/normDiffInfMasked.cu
	16bf/normDiffL1.cu
	16bf/normDiffL1Masked.cu
	16bf/normDiffL2.cu
	16bf/normDiffL2Masked.cu
	16bf/normInf.cu
	16bf/normInfMasked.cu
	16bf/normL1.cu
	16bf/normL1Masked.cu
	16bf/normL2.cu
	16bf/normL2Masked.cu
	16bf/normRelInf.cu
	16bf/normRelInfMasked.cu
	16bf/normRelL1.cu
	16bf/normRelL1Masked.cu
	16bf/normRelL2.cu
	16bf/normRelL2Masked.cu
	16bf/psnr.cu
	16bf/qualityIndex.cu
	16bf/qualityIndexWindow.cu
	16bf/squareDistanceNormalized.cu
	16bf/ssim.cu
	16bf/sum.cu
	16bf/sumMasked.cu

	16bf/histogramEven.cu
	16bf/histogramRange.cu

	
	16f/averageError.cu
	16f/averageErrorMasked.cu
	16f/averageRelativeError.cu
	16f/averageRelativeErrorMasked.cu
	16f/countInRange.cu
	16f/countInRangeMasked.cu
	16f/crossCorrelation.cu
	16f/crossCorrelationCoefficient.cu
	16f/crossCorrelationNormalized.cu
	16f/dotProduct.cu
	16f/dotProductMasked.cu
	16f/integral.cu
	16f/integralSqr.cu
	16f/max.cu
	16f/maxMasked.cu
	16f/maxIdx.cu
	16f/maxIdxMasked.cu
	16f/maxRelativeError.cu
	16f/maxRelativeErrorMasked.cu
	16f/mean.cu
	16f/meanMasked.cu
	16f/meanStd.cu
	16f/meanStdMasked.cu
	16f/min.cu
	16f/minMasked.cu
	16f/minIdx.cu
	16f/minIdxMasked.cu
	16f/minMax.cu
	16f/minMaxMasked.cu
	16f/minMaxEvery.cu
	16f/minMaxIdx.cu
	16f/minMaxIdxMasked.cu
	16f/mse.cu
	16f/mseMasked.cu
	16f/msssim.cu
	16f/normDiffInf.cu
	16f/normDiffInfMasked.cu
	16f/normDiffL1.cu
	16f/normDiffL1Masked.cu
	16f/normDiffL2.cu
	16f/normDiffL2Masked.cu
	16f/normInf.cu
	16f/normInfMasked.cu
	16f/normL1.cu
	16f/normL1Masked.cu
	16f/normL2.cu
	16f/normL2Masked.cu
	16f/normRelInf.cu
	16f/normRelInfMasked.cu
	16f/normRelL1.cu
	16f/normRelL1Masked.cu
	16f/normRelL2.cu
	16f/normRelL2Masked.cu
	16f/psnr.cu
	16f/qualityIndex.cu
	16f/qualityIndexWindow.cu
	16f/squareDistanceNormalized.cu
	16f/ssim.cu
	16f/sum.cu
	16f/sumMasked.cu

	16f/histogramEven.cu
	16f/histogramRange.cu

	
	16s/averageError.cu
	16s/averageErrorMasked.cu
	16s/averageRelativeError.cu
	16s/averageRelativeErrorMasked.cu
	16s/countInRange.cu
	16s/countInRangeMasked.cu
	16s/crossCorrelation.cu
	16s/crossCorrelationCoefficient.cu
	16s/crossCorrelationNormalized.cu
	16s/dotProduct.cu
	16s/dotProductMasked.cu
	16s/integral.cu
	16s/integralSqr.cu
	16s/max.cu
	16s/maxMasked.cu
	16s/maxIdx.cu
	16s/maxIdxMasked.cu
	16s/maxRelativeError.cu
	16s/maxRelativeErrorMasked.cu
	16s/mean.cu
	16s/meanMasked.cu
	16s/meanStd.cu
	16s/meanStdMasked.cu
	16s/min.cu
	16s/minMasked.cu
	16s/minIdx.cu
	16s/minIdxMasked.cu
	16s/minMax.cu
	16s/minMaxMasked.cu
	16s/minMaxEvery.cu
	16s/minMaxIdx.cu
	16s/minMaxIdxMasked.cu
	16s/mse.cu
	16s/mseMasked.cu
	16s/msssim.cu
	16s/normDiffInf.cu
	16s/normDiffInfMasked.cu
	16s/normDiffL1.cu
	16s/normDiffL1Masked.cu
	16s/normDiffL2.cu
	16s/normDiffL2Masked.cu
	16s/normInf.cu
	16s/normInfMasked.cu
	16s/normL1.cu
	16s/normL1Masked.cu
	16s/normL2.cu
	16s/normL2Masked.cu
	16s/normRelInf.cu
	16s/normRelInfMasked.cu
	16s/normRelL1.cu
	16s/normRelL1Masked.cu
	16s/normRelL2.cu
	16s/normRelL2Masked.cu
	16s/psnr.cu
	16s/qualityIndex.cu
	16s/qualityIndexWindow.cu
	16s/squareDistanceNormalized.cu
	16s/ssim.cu
	16s/sum.cu
	16s/sumMasked.cu

	16s/histogramEven.cu
	16s/histogramRange.cu

	
	16sc/averageError.cu
	16sc/averageErrorMasked.cu
	16sc/averageRelativeError.cu
	16sc/averageRelativeErrorMasked.cu
	16sc/dotProduct.cu
	16sc/dotProductMasked.cu
	16sc/maxRelativeError.cu
	16sc/maxRelativeErrorMasked.cu
	16sc/mean.cu
	16sc/meanMasked.cu
	16sc/meanStd.cu
	16sc/meanStdMasked.cu
	16sc/mse.cu
	16sc/mseMasked.cu
	16sc/normDiffInf.cu
	16sc/normDiffInfMasked.cu
	16sc/sum.cu
	16sc/sumMasked.cu

	
	16u/averageError.cu
	16u/averageErrorMasked.cu
	16u/averageRelativeError.cu
	16u/averageRelativeErrorMasked.cu
	16u/countInRange.cu
	16u/countInRangeMasked.cu
	16u/crossCorrelation.cu
	16u/crossCorrelationCoefficient.cu
	16u/crossCorrelationNormalized.cu
	16u/dotProduct.cu
	16u/dotProductMasked.cu
	16u/integral.cu
	16u/integralSqr.cu
	16u/max.cu
	16u/maxMasked.cu
	16u/maxIdx.cu
	16u/maxIdxMasked.cu
	16u/maxRelativeError.cu
	16u/maxRelativeErrorMasked.cu
	16u/mean.cu
	16u/meanMasked.cu
	16u/meanStd.cu
	16u/meanStdMasked.cu
	16u/min.cu
	16u/minMasked.cu
	16u/minIdx.cu
	16u/minIdxMasked.cu
	16u/minMax.cu
	16u/minMaxMasked.cu
	16u/minMaxEvery.cu
	16u/minMaxIdx.cu
	16u/minMaxIdxMasked.cu
	16u/mse.cu
	16u/mseMasked.cu
	16u/msssim.cu
	16u/normDiffInf.cu
	16u/normDiffInfMasked.cu
	16u/normDiffL1.cu
	16u/normDiffL1Masked.cu
	16u/normDiffL2.cu
	16u/normDiffL2Masked.cu
	16u/normInf.cu
	16u/normInfMasked.cu
	16u/normL1.cu
	16u/normL1Masked.cu
	16u/normL2.cu
	16u/normL2Masked.cu
	16u/normRelInf.cu
	16u/normRelInfMasked.cu
	16u/normRelL1.cu
	16u/normRelL1Masked.cu
	16u/normRelL2.cu
	16u/normRelL2Masked.cu
	16u/psnr.cu
	16u/qualityIndex.cu
	16u/qualityIndexWindow.cu
	16u/squareDistanceNormalized.cu
	16u/ssim.cu
	16u/sum.cu
	16u/sumMasked.cu

	16u/histogramEven.cu
	16u/histogramRange.cu

	
	32f/averageError.cu
	32f/averageErrorMasked.cu
	32f/averageRelativeError.cu
	32f/averageRelativeErrorMasked.cu
	32f/countInRange.cu
	32f/countInRangeMasked.cu
	32f/crossCorrelation.cu
	32f/crossCorrelationCoefficient.cu
	32f/crossCorrelationNormalized.cu
	32f/dotProduct.cu
	32f/dotProductMasked.cu
	32f/integral.cu
	32f/integralSqr.cu
	32f/max.cu
	32f/maxMasked.cu
	32f/maxIdx.cu
	32f/maxIdxMasked.cu
	32f/maxRelativeError.cu
	32f/maxRelativeErrorMasked.cu
	32f/mean.cu
	32f/meanMasked.cu
	32f/meanStd.cu
	32f/meanStdMasked.cu
	32f/min.cu
	32f/minMasked.cu
	32f/minIdx.cu
	32f/minIdxMasked.cu
	32f/minMax.cu
	32f/minMaxMasked.cu
	32f/minMaxEvery.cu
	32f/minMaxIdx.cu
	32f/minMaxIdxMasked.cu
	32f/mse.cu
	32f/mseMasked.cu
	32f/msssim.cu
	32f/normDiffInf.cu
	32f/normDiffInfMasked.cu
	32f/normDiffL1.cu
	32f/normDiffL1Masked.cu
	32f/normDiffL2.cu
	32f/normDiffL2Masked.cu
	32f/normInf.cu
	32f/normInfMasked.cu
	32f/normL1.cu
	32f/normL1Masked.cu
	32f/normL2.cu
	32f/normL2Masked.cu
	32f/normRelInf.cu
	32f/normRelInfMasked.cu
	32f/normRelL1.cu
	32f/normRelL1Masked.cu
	32f/normRelL2.cu
	32f/normRelL2Masked.cu
	32f/psnr.cu
	32f/qualityIndex.cu
	32f/qualityIndexWindow.cu
	32f/rectStdDev.cu
	32f/squareDistanceNormalized.cu
	32f/ssim.cu
	32f/sum.cu
	32f/sumMasked.cu

	32f/histogramEven.cu
	32f/histogramRange.cu

	
	32fc/averageError.cu
	32fc/averageErrorMasked.cu
	32fc/averageRelativeError.cu
	32fc/averageRelativeErrorMasked.cu
	32fc/dotProduct.cu
	32fc/dotProductMasked.cu
	32fc/maxRelativeError.cu
	32fc/maxRelativeErrorMasked.cu
	32fc/mean.cu
	32fc/meanMasked.cu
	32fc/meanStd.cu
	32fc/meanStdMasked.cu
	32fc/mse.cu
	32fc/mseMasked.cu
	32fc/normDiffInf.cu
	32fc/normDiffInfMasked.cu
	32fc/sum.cu
	32fc/sumMasked.cu

	
	32s/averageError.cu
	32s/averageErrorMasked.cu
	32s/averageRelativeError.cu
	32s/averageRelativeErrorMasked.cu
	32s/countInRange.cu
	32s/countInRangeMasked.cu
	32s/crossCorrelation.cu
	32s/crossCorrelationCoefficient.cu
	32s/crossCorrelationNormalized.cu
	32s/dotProduct.cu
	32s/dotProductMasked.cu
	32s/integral.cu
	32s/integralSqr.cu
	32s/max.cu
	32s/maxMasked.cu
	32s/maxIdx.cu
	32s/maxIdxMasked.cu
	32s/maxRelativeError.cu
	32s/maxRelativeErrorMasked.cu
	32s/mean.cu
	32s/meanMasked.cu
	32s/meanStd.cu
	32s/meanStdMasked.cu
	32s/min.cu
	32s/minMasked.cu
	32s/minIdx.cu
	32s/minIdxMasked.cu
	32s/minMax.cu
	32s/minMaxMasked.cu
	32s/minMaxEvery.cu
	32s/minMaxIdx.cu
	32s/minMaxIdxMasked.cu
	32s/mse.cu
	32s/mseMasked.cu
	32s/msssim.cu
	32s/normDiffInf.cu
	32s/normDiffInfMasked.cu
	32s/normDiffL1.cu
	32s/normDiffL1Masked.cu
	32s/normDiffL2.cu
	32s/normDiffL2Masked.cu
	32s/normInf.cu
	32s/normInfMasked.cu
	32s/normL1.cu
	32s/normL1Masked.cu
	32s/normL2.cu
	32s/normL2Masked.cu
	32s/normRelInf.cu
	32s/normRelInfMasked.cu
	32s/normRelL1.cu
	32s/normRelL1Masked.cu
	32s/normRelL2.cu
	32s/normRelL2Masked.cu
	32s/psnr.cu
	32s/qualityIndex.cu
	32s/qualityIndexWindow.cu
	32s/rectStdDev.cu
	32s/squareDistanceNormalized.cu
	32s/ssim.cu
	32s/sum.cu
	32s/sumMasked.cu

	32s/histogramEven.cu
	32s/histogramRange.cu

	
	32sc/averageError.cu
	32sc/averageErrorMasked.cu
	32sc/averageRelativeError.cu
	32sc/averageRelativeErrorMasked.cu
	32sc/dotProduct.cu
	32sc/dotProductMasked.cu
	32sc/maxRelativeError.cu
	32sc/maxRelativeErrorMasked.cu
	32sc/mean.cu
	32sc/meanMasked.cu
	32sc/meanStd.cu
	32sc/meanStdMasked.cu
	32sc/mse.cu
	32sc/mseMasked.cu
	32sc/normDiffInf.cu
	32sc/normDiffInfMasked.cu
	32sc/sum.cu
	32sc/sumMasked.cu

	
	32u/averageError.cu
	32u/averageErrorMasked.cu
	32u/averageRelativeError.cu
	32u/averageRelativeErrorMasked.cu
	32u/countInRange.cu
	32u/countInRangeMasked.cu
	32u/crossCorrelation.cu
	32u/crossCorrelationCoefficient.cu
	32u/crossCorrelationNormalized.cu
	32u/dotProduct.cu
	32u/dotProductMasked.cu
	32u/integral.cu
	32u/integralSqr.cu
	32u/max.cu
	32u/maxMasked.cu
	32u/maxIdx.cu
	32u/maxIdxMasked.cu
	32u/maxRelativeError.cu
	32u/maxRelativeErrorMasked.cu
	32u/mean.cu
	32u/meanMasked.cu
	32u/meanStd.cu
	32u/meanStdMasked.cu
	32u/min.cu
	32u/minMasked.cu
	32u/minIdx.cu
	32u/minIdxMasked.cu
	32u/minMax.cu
	32u/minMaxMasked.cu
	32u/minMaxEvery.cu
	32u/minMaxIdx.cu
	32u/minMaxIdxMasked.cu
	32u/mse.cu
	32u/mseMasked.cu
	32u/msssim.cu
	32u/normDiffInf.cu
	32u/normDiffInfMasked.cu
	32u/normDiffL1.cu
	32u/normDiffL1Masked.cu
	32u/normDiffL2.cu
	32u/normDiffL2Masked.cu
	32u/normInf.cu
	32u/normInfMasked.cu
	32u/normL1.cu
	32u/normL1Masked.cu
	32u/normL2.cu
	32u/normL2Masked.cu
	32u/normRelInf.cu
	32u/normRelInfMasked.cu
	32u/normRelL1.cu
	32u/normRelL1Masked.cu
	32u/normRelL2.cu
	32u/normRelL2Masked.cu
	32u/psnr.cu
	32u/qualityIndex.cu
	32u/qualityIndexWindow.cu
	32u/squareDistanceNormalized.cu
	32u/ssim.cu
	32u/sum.cu
	32u/sumMasked.cu

	32u/histogramEven.cu
	32u/histogramRange.cu

	
	64f/averageError.cu
	64f/averageErrorMasked.cu
	64f/averageRelativeError.cu
	64f/averageRelativeErrorMasked.cu
	64f/countInRange.cu
	64f/countInRangeMasked.cu
	64f/crossCorrelation.cu
	64f/crossCorrelationNormalized.cu
	64f/dotProduct.cu
	64f/dotProductMasked.cu
	64f/integral.cu
	64f/integralSqr.cu
	64f/max.cu
	64f/maxMasked.cu
	64f/maxIdx.cu
	64f/maxIdxMasked.cu
	64f/maxRelativeError.cu
	64f/maxRelativeErrorMasked.cu
	64f/mean.cu
	64f/meanMasked.cu
	64f/meanStd.cu
	64f/meanStdMasked.cu
	64f/min.cu
	64f/minMasked.cu
	64f/minIdx.cu
	64f/minIdxMasked.cu
	64f/minMax.cu
	64f/minMaxMasked.cu
	64f/minMaxEvery.cu
	64f/minMaxIdx.cu
	64f/minMaxIdxMasked.cu
	64f/mse.cu
	64f/mseMasked.cu
	64f/msssim.cu
	64f/normDiffInf.cu
	64f/normDiffInfMasked.cu
	64f/normDiffL1.cu
	64f/normDiffL1Masked.cu
	64f/normDiffL2.cu
	64f/normDiffL2Masked.cu
	64f/normInf.cu
	64f/normInfMasked.cu
	64f/normL1.cu
	64f/normL1Masked.cu
	64f/normL2.cu
	64f/normL2Masked.cu
	64f/normRelInf.cu
	64f/normRelInfMasked.cu
	64f/normRelL1.cu
	64f/normRelL1Masked.cu
	64f/normRelL2.cu
	64f/normRelL2Masked.cu
	64f/psnr.cu
	64f/qualityIndex.cu
	64f/qualityIndexWindow.cu
	64f/rectStdDev.cu
	64f/squareDistanceNormalized.cu
	64f/ssim.cu
	64f/sum.cu
	64f/sumMasked.cu

	64f/histogramEven.cu
	64f/histogramRange.cu
	)
	
target_include_directories(backends.cuda.image.statistics  PUBLIC 
						   ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
						   ${PROJECT_SOURCE_DIR}/src
						  )
target_link_libraries(backends.cuda.image.statistics PRIVATE  
						project_options					
						)
target_link_libraries(backends.cuda.image.statistics PUBLIC  
						backends.cuda
						common
						common.image
						)